# Intelligent-cc-generation

./: .gitignore  README.md
demo_videos/: drivelink
demo_videos/output/: vid1.reviewed.en.srt  vid10.reviewed.en.srt  vid2.reviewed.en.srt  (+4 more)
main/: .gitignore  README.md  pyproject.toml  requirements-audio.txt  requirements-translate.txt  requirements.txt
main/cc_suggester/: __init__.py  __main__.py
main/cc_suggester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
main/cc_suggester/audio/: __init__.py  dsp.py  events.py  extractor.py  label_mapping.py  vad.py  wav.py
main/cc_suggester/audio/backends/: __init__.py  base.py  dsp.py  mock.py  unavailable.py  yamnet.py
main/cc_suggester/cli/: app.py
main/cc_suggester/core/: __init__.py  config.py  diagnostics.py  errors.py  media.py  pipeline.py  types.py
main/cc_suggester/decision/: __init__.py  labels.py  rules.py  scorer.py
main/cc_suggester/output/: __init__.py  csv_report.py  json_report.py  review_export.py  srt.py
main/cc_suggester/translation/: __init__.py  glossary.py
main/cc_suggester/ui/: __init__.py  streamlit_app.py
main/cc_suggester/vision/: __init__.py  frame_sampler.py  optical_flow.py  reactions.py
main/cc_suggester/vision/backends/: __init__.py  base.py  mediapipe.py  mock.py  opencv.py
main/configs/: default.json
main/scripts/: generate_sample_video.py
main/tests/: test_config_cli.py  test_dsp_backend.py  test_outputs.py  test_real_video_integration.py  test_review_export.py  test_vision_pipeline.py  test_yamnet_backend.py
mockups/: web-ui.html
