[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-suggester"
version = "0.1.0"
description = "AI-assisted non-speech closed caption suggestion pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Planet Read project contributor" }
]
dependencies = []

[project.optional-dependencies]
audio = ["numpy>=1.26", "tensorflow>=2.16", "tensorflow-hub>=0.16"]
ui = ["streamlit>=1.34"]
vision = ["opencv-python>=4.8", "mediapipe>=0.10"]
dev = ["pytest>=8.0"]

[project.scripts]
ccs = "cc_suggester.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cc_suggester*"]
